--- a/src/static.html
+++ b/src/static.html
@@ -1,5 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <title>Some relevant title</title>
     <script src="http://localhost:35729/livereload.js"></script>
   </head>
   <body>
